Fixed minor layout issues on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -361,7 +361,7 @@ body {
 #close-lightbox {
   position: absolute;
   top: 1px;
-  left: 475px;
+  right: -3px;
   user-select: none;
   border: none;
   background-color: transparent;
@@ -386,18 +386,19 @@ body {
   opacity: 90%;
 }
 
-#prev-btn {
+#prev-btn, #next-btn {
   position: absolute;
-  top: 260px;
-  right: 480px;
+  top: 50%;
+  transform: translateY(-150%);
   user-select: none;
 }
 
+#prev-btn {
+  left: -15px;
+}
+
 #next-btn {
-  position: absolute;
-  top: 256px;
   right: -15px;
-  user-select: none;
 }
 
 
@@ -603,6 +604,12 @@ body {
     gap: 2rem;
   }
 
+  #quantity-cart-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
   #product-info {
     max-width: 100%;
   }
@@ -613,7 +620,7 @@ body {
   }
 
   #thumbnail-row {
-    max-width: 100%;
+    max-width: 500px;
     gap: 3%;
   }
 
@@ -625,7 +632,7 @@ body {
 @media (max-width: 500px) {
   #quantity-cart-container {
     flex-direction: column;
-    align-items: stretch;
+    align-items: center;
     gap: 1rem;
   }
 
@@ -661,5 +668,13 @@ body {
 
   .cart-info {
     right: 15vh;
+  }
+
+  #lightbox-img {
+    max-width: 400px;
+  }
+
+  #lightbox-thumbnail-row {
+    width: 10px
   }
 }
